add HARINOKI_PROPERTIES handling